--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ subjects:
 - !lcc 'PR'
 - !lcsh 'Humorous stories, English'
 - !lcsh 'England -- Social life and customs -- Fiction'
+- GITenberg
 tableOfContents: The changeling -- Mixed relations -- His lordship -- Alf's dream
   -- A distant relative -- The test -- In the family -- A love-knot -- The dreamer
   -- Angels' visits.
